// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticlesCell Empty fragment matches snapshot 1`] = `
<DocumentFragment>
  <div>
    Empty
  </div>
</DocumentFragment>
`;

exports[`ArticlesCell Failure fragment matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="color: red;"
  >
    Error: Oh no
  </div>
</DocumentFragment>
`;

exports[`ArticlesCell Loading fragment matches snapshot 1`] = `
<DocumentFragment>
  <div>
    Loading...
  </div>
</DocumentFragment>
`;

exports[`ArticlesCell Success fragment matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="space-y-10"
  >
    <article>
      <header>
        <h2
          class="text-xl text-blue-700 font-semibold"
        >
          <a
            href="/article/42"
          >
            ArticlesCell Title 1
          </a>
        </h2>
      </header>
      <div
        class="mt-2 text-gray-900 font-light"
      >
        ArticlesCell Body 1
      </div>
      <div>
        Posted at: 2020-01-01T00:00:00.000Z
      </div>
    </article>
    <article>
      <header>
        <h2
          class="text-xl text-blue-700 font-semibold"
        >
          <a
            href="/article/43"
          >
            ArticlesCell Title 2
          </a>
        </h2>
      </header>
      <div
        class="mt-2 text-gray-900 font-light"
      >
        ArticlesCell Body 2
      </div>
      <div>
        Posted at: 2020-01-02T00:00:00.000Z
      </div>
    </article>
    <article>
      <header>
        <h2
          class="text-xl text-blue-700 font-semibold"
        >
          <a
            href="/article/44"
          >
            ArticlesCell Title 3
          </a>
        </h2>
      </header>
      <div
        class="mt-2 text-gray-900 font-light"
      >
        ArticlesCell Body 3
      </div>
      <div>
        Posted at: 2020-01-03T00:00:00.000Z
      </div>
    </article>
  </div>
</DocumentFragment>
`;
